--- a/a/res/layout/main.xml
+++ b/a/res/layout/main.xml
@@ -9,4 +9,15 @@
         android:layout_height="wrap_content"
         android:text="@string/hello" />
 
+    <MediaController
+        android:id="@+id/mediaController1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </MediaController>
+
+    <VideoView
+        android:id="@+id/videoView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
