--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -4,10 +4,11 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <Button 
+        android:id="@+id/buttonSetting"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:text="Setup"/>
 
     <VideoView
         android:id="@+id/videoView1"
