--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -14,5 +14,10 @@
         android:id="@+id/videoView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <WebView 
+        android:id="@+id/webView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"  />
 
 </LinearLayout>
